# cmake-embed

./: .gitignore  CMakeLists.txt  EmbedResourcesConfig.cmake  LICENSE  README.md  conanfile.py
cmake/: EmbedResources.cmake
tests/: CMakeLists.txt  test_embedding.cpp
tests/test_resources/: binary.hpp  binary_data.cpp  text.hpp  text_data.cpp
